--- a/Project_ASP.NET/Views/Reservations/Details.cshtml
+++ b/Project_ASP.NET/Views/Reservations/Details.cshtml
@@ -67,7 +67,7 @@
                                     Back to List
                                 </a>
                                 <a class="btn btn-success text-white">
-                                    <i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.priceOfReservation.ToString("c"))
+                                    <i class="bi bi-cart-plus"></i> Add to cart (Price @Model.priceOfReservation.ToString("c"))
                                 </a>
                             </p>
                         </div>
