--- a/Project_ASP.NET/Views/Reservations/Index.cshtml
+++ b/Project_ASP.NET/Views/Reservations/Index.cshtml
@@ -58,6 +58,13 @@
                                 <a class="btn btn-success text-white">
                                 <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.priceOfReservation.ToString("c"))
                                 </a>
+                                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                {
+                                    <th>
+                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ReservationId"><i class="bi bi-trash"></i>Delete</a>
+                                    </th>
+                                }
+                                
                     </p>
                 </div>
             </div>
