--- a/Project_ASP.NET/Views/Reservations/Index.cshtml
+++ b/Project_ASP.NET/Views/Reservations/Index.cshtml
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <img src ="@item.imgOfReservation" width="100%" alt="@item.NameOfReservation">
+                <img src ="@item.imgOfReservation" width="50%" alt="@item.NameOfReservation">
             </div>
             <div class="col-md-6">
                 <div class="card-body">
@@ -56,7 +56,7 @@
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
                                 <a class="btn btn-success text-white">
-                                <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.priceOfReservation.ToString("c"))
+                                <i class="bi bi-cart-plus"></i> Price (@item.priceOfReservation.ToString("c"))
                                 </a>
                                 @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                                 {
